--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,30 @@
-<nav class="navbar fixed-bottom navbar-light bg-light">
+<!-- <nav class="navbar fixed-bottom navbar-light bg-light">
 {%- if site.show-style-guide %}
     <a href="{{ site.baseurl }}{% link style-guide/index.md %}" class="btn">Style Guide</a>
 {%- endif %}
-</nav>
+</nav> -->
+
+<div class="row">
+
+    <div class="col-12 col-lg-6">
+        <p><a href="over_ons.html" target="blank">Contact</a></p>
+        <p><a href="voorwaarden.html" target="blank">Voorwaarden</a></p>
+        <p><a href="https://kinepolis.be/nl/bioscopen/kinepolis-gent" target="blank">Cinematickets verkrijgbaar via: <br> www.kinepolis.be/Gent</a></p>
+    </div>
+
+    <div class="col-12 col-lg-6 social_icons">
+        <a href="https://www.snapchat.com/l/nl-nl/" target="blank">
+            <img src="{{ site.baseurl }}/images/icoon_snapchat.png" alt="snapchat">
+        </a>
+        <a href="https://www.instagram.com/" target="blank">
+            <img src="{{ site.baseurl }}/images/icoon_instagram.png" alt="snapchat">
+        </a>
+        <a href="https://www.facebook.com/" target="blank">
+            <img src="{{ site.baseurl }}/images/icoon_facebook.png" alt="snapchat">
+        </a>
+        <a href="https://twitter.com/?lang=nl" target="blank">
+            <img src="{{ site.baseurl }}/images/icoon_twitter.png" alt="snapchat">
+        </a>
+    </div>
+
+</div>
