--- a/_sass/_bootstrap-variables.scss
+++ b/_sass/_bootstrap-variables.scss
@@ -8,13 +8,13 @@
 // Color system
 //
 
-$indigo:  #6610f2;
+$indigo:  #B5D6CF;
 $primary: $indigo;
 
 // Fonts
 //
 // Font, line-height, and color for body text, headings, and more.
 
-@import url('https://fonts.googleapis.com/css?family=Merriweather');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Raleway');
 
 $font-family-base: Merriweather, serif;
