--- a/_sass/_bootstrap-variables.scss
+++ b/_sass/_bootstrap-variables.scss
@@ -8,13 +8,17 @@
 // Color system
 //
 
-$indigo:  #B5D6CF;
-$primary: $indigo;
+//$grey: #636571;
+//$brown: #B39480;
+//$beige: #B39480;
+$blue:  #B5D6CF;
+$primar: $blue;
 
 // Fonts
 //
 // Font, line-height, and color for body text, headings, and more.
 
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display|Raleway');
+
 
 $font-family-base: Merriweather, serif;
