--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+    <div class="container navigation">
+
     <!-- websitelogo -->
     <a class="navbar-brand" href="index.html">Teddy2Rent</a>
     
@@ -28,11 +31,14 @@
                       </ul>
                   </li>
               {% else %}
-                  <li class="nav-item{{ class }}">
+                  <li class="nav-item{{ navigation }}">
                       <a class="nav-link" href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
                   </li>
               {% endif %}
           {% endfor %}
       </ul>
     </div>
+
+    </div> <!-- container -->
+
   </nav>
