--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}{% link assets/css/app.scss %}">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/images/favi_2.png" type="image/x-icon" />
 </head>
 <body>
 {% include nav.html %}
-<div class="container">
     {{ content }}
-</div>
 {% include footer.html %}
 {% include scripts-bottom.html %}
 </body>
