--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,14 +1,60 @@
+footer{
+    margin-top: 40px;
+    padding: 20px 0px 30px 0px;
+    font-family: 'Raleway Semibold', sans-serif;
+    background-color: #636571;
+}
+
+footer a{
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+}
+
+footer a:hover, .footer a:active{
+    color: rgba(255, 255, 255, 1);
+    text-decoration: none;
+    transition: 0.2s;
+}
+
+/*sociale media*/
+.banaan{
+    border: solid 2px rgb(245, 229, 89);
+}
+
 .social_icons{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    margin-top: 20px;
 }
 
 .social_icons img{
-    width: 40%;
+    width: 60%;
 }
 
 .social_icons img:hover{
-    width: 50%;
-    border: 2px solid lightblue;
-    border-radius: 50%;
+    transform: scale(1.5);
+    transition: 0.5s;
+}
+
+@media (min-width: 768px) {
+
+    .social_icons img:hover{
+        transform: scale(1.3);
+    }
+
+}
+
+@media (min-width: 992px) {
+
+    .social_icons{
+        margin-top: 40px;
+    }
+
+    .social_icons img{
+        width: 40%;
+    }
+    
+    .social_icons img:hover{
+        transform: scale(1.5);
+    }
 }
