--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,32 +6,34 @@
 <footer>
 <div class="container">
 <div class="row">
-    <div class="col-12 col-md-6 col-lg-6">
+    <div class="col-12 col-md-8 col-lg-8">
         <p><a href="over_ons.html">Contact</a></p>
         <p><a href="voorwaarden.html">Voorwaarden</a></p>
         <p><a href="https://kinepolis.be/nl/bioscopen/kinepolis-gent" target="blank">Cinematickets verkrijgbaar via: <br> www.kinepolis.be/Gent</a></p>
     </div>
 
-
 <!-- <div class="row social_icons"> -->
-    <div class="col-12 col-md-6 col-lg-6 social_icons">
+    <div class="col-3 col-md-1 col-lg-1">
         <a href="https://www.snapchat.com/l/nl-nl/" target="blank">
-            <img src="{{ site.baseurl }}/images/icoon_snapchat.png" alt="snapchat">
+            <img src="{{ site.baseurl }}/images/icoon_snapchat.png" alt="snapchat" class="social_icons">
         </a>
+    </div>
     
-    
+    <div class="col-3 col-md-1 col-lg-1">
         <a href="https://www.instagram.com/" target="blank">
-            <img src="{{ site.baseurl }}/images/icoon_instagram.png" alt="snapchat">
+            <img src="{{ site.baseurl }}/images/icoon_instagram.png" alt="snapchat" class="social_icons">
         </a>
+    </div>
     
-
+    <div class="col-3 col-md-1 col-lg-1">
         <a href="https://www.facebook.com/" target="blank">
-            <img src="{{ site.baseurl }}/images/icoon_facebook.png" alt="snapchat">
+            <img src="{{ site.baseurl }}/images/icoon_facebook.png" alt="snapchat" class="social_icons">
         </a>
+    </div>
     
-
+    <div class="col-3 col-md-1 col-lg-1">
         <a href="https://twitter.com/?lang=nl" target="blank">
-            <img src="{{ site.baseurl }}/images/icoon_twitter.png" alt="snapchat">
+            <img src="{{ site.baseurl }}/images/icoon_twitter.png" alt="snapchat" class="social_icons">
         </a>
     </div>
 </div>
