--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,7 +1,3 @@
-/*.{
-    background-color: rgba(177, 197, 204, 1);
-}*/
-
 body{
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
@@ -21,15 +17,9 @@ h1, h2, .modal-title{
     font-size: 30px;
 }
 
-/*{
-    font-family: 'Playfair Display', serif;
-
-    font-size: 30px;
-}*/
-
 .title{
-    margin: 40px 0px 20px 0px;
-    padding: 10px 10px 0px 15px;
+    margin: 40px 0px 20px -15px;
+    padding: 5px 25px 7px 15px;
     background-color: rgba(236, 228, 223, 1);
     color: rgba(99, 101, 113, 1);
     border-radius: 0px 10px 10px 0px;
@@ -80,20 +70,39 @@ h1, h2, .modal-title{
     margin-bottom: 10px;
 }
 
-.form-check-input{
+/*EIGEN CHECKBOX*/
+.check_paw .form-check-input{
     display: none;
+}
+
+.check_paw .form-check-label:last-of-type{
+    padding-left: 0px;
 }
 
 label.checkbox_round{
     border: solid 2px rgba(236, 228, 223, 1);
     border-radius: 50%;
-    width: 20px;
+    width: 22px;
     height: 22px;
 }
 
 #conditions:checked + label.checkbox_round{
     background: url(../../images/lijstje.png);
     background-size: 22px;
+}
+
+#conditions_qr2:checked + label.checkbox_round{
+    background: url(../../images/lijstje.png);
+    background-size: 22px;
+}
+
+.payment_methods .col-10{
+    padding: 0px 10px 0px 25px;
+}
+
+.payment_methods .col-2{
+    padding-left: 35px;
+    padding-right: 0px;
 }
 
 .payment_methods{
@@ -105,7 +114,6 @@ label.checkbox_round{
 
 .payment_methods .card{
     border: none; 
-
 }
 
 .payment_methods .card-header{
@@ -114,8 +122,19 @@ label.checkbox_round{
 }
 
 .payment_methods .form-check{
-    margin: 20px 0px;
+    margin: 20px 0px 20px -20px;
 }
+
+.payment_methods .form-check-input{
+    margin-top: 20px;
+}
+/*
+.payment_methods .form-check-input:first-child{
+    margin-top: 20px;
+}
+.payment_methods .form-check-input:last-of-type{
+    margin-top: 40px;
+}*/
 
 p>img{
     width: 12px;
@@ -215,6 +234,7 @@ p>img{
     font-size: 22px;
     color: rgba(181, 214, 207, 1);
     font-family: 'Raleway Semibold', sans-serif;
+    text-align: center;
 }
 
 /* pijltjes */
@@ -286,6 +306,20 @@ ul {
     transition: 0.5s;
 }
 
+.carousel-indicators li{
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin: 5px;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+}
+
+.teddy_3{
+    border-radius: 10px;
+}
+
 /*.carousel-control-prev-icon{
     width: 40px;
 }*/
@@ -299,9 +333,16 @@ ul {
 
 .card_thankyou img{
     width: 80px;
-    margin-left: 50px;
+    margin-left: 75px;
 }
 
+#collapse_thankyou .card-body{
+    padding: 20px;
+}
+
+.card-body{
+    padding: 0px 10px;
+}
 
 /* BREADCRUMBS */
 .breadcrumb{
@@ -359,13 +400,16 @@ tbody>tr:last-of-type{
 @media (min-width: 768px) {
 
     h1{
-        font-size: 3em;
-        /*padding-left: 20%;*/
+        font-size: 35px;
     }
-
+    /*
+    .title{
+        margin: 60px 0px 40px -15px;
+    }
+    */
     .btn{
         border-radius: 8px;
-        font-size: 2em;
+        font-size: 1.5em;
         line-height: 140%;
     }
     
@@ -404,7 +448,7 @@ tbody>tr:last-of-type{
 
     .card_thankyou img{
         width: 100px;
-        margin: 20px 0px 0px 150px;
+        margin: 20px 0px -15px 40px;
     }
 }
 
@@ -433,6 +477,6 @@ tbody>tr:last-of-type{
 
     .card_thankyou img{
         width: 200px;
-        margin: 20px 0px 0px 300px;
+        margin: 20px 0px -20px 150px;
     }
 }
