--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -5,6 +5,7 @@ footer{
     background-color: #636571;
 }
 
+/*tekst*/
 footer a{
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
@@ -22,39 +23,28 @@ footer a:hover, .footer a:active{
 }
 
 .social_icons{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
+    width: 100%;
+    margin: 10px 0px 5px 0px;
 }
 
-.social_icons img{
-    width: 60%;
-}
-
-.social_icons img:hover{
+.social_icons:hover, .social_icons:active{
     transform: scale(1.5);
     transition: 0.5s;
 }
 
+/*
+.social_icons{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}*/
+
 @media (min-width: 768px) {
-
-    .social_icons img:hover{
-        transform: scale(1.3);
+    .social_icons{
+        margin: 0px;
     }
-
 }
 
 @media (min-width: 992px) {
-
-    .social_icons{
-        margin-top: 40px;
-    }
-
-    .social_icons img{
-        width: 40%;
-    }
     
-    .social_icons img:hover{
-        transform: scale(1.5);
-    }
 }
