--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,44 +1,55 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-end">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-    <div class="container navigation">
+    <div class="container">
+        
+        <div class="col-6 col-md-9 col-lg-8">
+            <!-- websitelogo -->
+            <a class="navbar-brand mr-auto" href="index.html">Teddy2Rent</a>
+        </div>
 
-    <!-- websitelogo -->
-    <a class="navbar-brand" href="index.html">Teddy2Rent</a>
-    
-    <!-- hamburger icoon -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <div class="col-6 col-md-3 col-lg-4 ">
+            <div class="row"> <!-- geneste kolommen-->
+                <div class="col-12">
+                    <!-- hamburger icoon -->
+                    <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
   
-    <!-- hoofdnavigatie -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-          {% assign links = site.data.navigation %}
-          {% for link in links %}
-              {% assign class = nil %}
-              {% if page.url contains link.url %}
-                  {% assign class = 'active' %}
-              {% endif %}
-              {% if link.sublinks %} <!-- hebben wij eigenlijk niet nodig -->
-                  <li class="nav-item dropdown {{ class }}"> <!-- hier onze classes toev of veranderen om onze lay-out te verkrijgen -->
-                      <a href="{{ site.baseurl }}{{ link.url }}" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ link.title }} <span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                          {% for sublink in link.sublinks %}
-                                  <li class="dropdown-item">
-                                      <a class="nav-link" href="{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a>
-                                  </li>
-                          {% endfor %}
-                      </ul>
-                  </li>
-              {% else %}
-                  <li class="nav-item{{ navigation }}">
-                      <a class="nav-link " href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
-                  </li>
-              {% endif %}
-          {% endfor %}
-      </ul>
-    </div>
+                <div class="col-12">
+                    <!-- hoofdnavigatie -->
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                              {% assign links = site.data.navigation %}
+                              {% for link in links %}
+                                  {% assign class = nil %}
+                                  {% if page.url contains link.url %}
+                                      {% assign class = 'active' %}
+                                  {% endif %}
+                                  {% if link.sublinks %} <!-- hebben wij eigenlijk niet nodig -->
+                                      <li class="nav-item dropdown {{ class }}"> <!-- hier onze classes toev of veranderen om onze lay-out te verkrijgen -->
+                                          <a href="{{ site.baseurl }}{{ link.url }}" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ link.title }} <span class="caret"></span></a>
+                                          <ul class="dropdown-menu">
+                                              {% for sublink in link.sublinks %}
+                                              <li class="dropdown-item">
+                                              <a class="nav-link" href="{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a>
+                                              </li>
+                                              {% endfor %}
+                                          </ul>
+                                      </li>
+                                  {% else %}
+                                      <li class="navigation-item">
+                                          <a class="nav-link" href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
+                                      </li>
+                                  {% endif %}
+                              {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
 
     </div> <!-- container -->
 
-  </nav>
+</nav>
