--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -32,19 +32,18 @@ footer a:hover, .footer a:active{
     transition: 0.5s;
 }
 
-/*
-.social_icons{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-}*/
-
 @media (min-width: 768px) {
+    footer{
+        margin-top: 60px;
+    }
+
     .social_icons{
         margin: 0px;
     }
 }
 
 @media (min-width: 992px) {
-    
+    footer{
+        margin-top: 100px;
+    }
 }
